# grpc-he-benchmark

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.compute.yml  docker-compose.frontend.yml  docker-compose.yml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
cpp_wrapper/: CMakeLists.txt
cpp_wrapper/include/: openfhe_wrapper.h  seal_wrapper.h
cpp_wrapper/src/: openfhe_cnn_ops.cpp  openfhe_wrapper.cpp  seal_wrapper.cpp
examples/: basic_encryption.rs  benchmark.rs  cnn_operations.rs  medical_data.rs  mnist_benchmark.rs  mnist_inference.rs  mnist_verify.rs  openfhe_cnn_demo.rs  performance_test.rs  test_weight_loader.rs  verify_weight_loader_standalone.rs
examples/java-client/src/main/java/com/example/hegrpc/: HEGrpcClientApplication.java
examples/java-client/src/main/java/com/example/hegrpc/benchmark/: BenchmarkDemo.java
examples/java-client/src/main/java/com/example/hegrpc/config/: GrpcConfig.java
examples/java-client/src/main/java/com/example/hegrpc/data/: PatientDataEntry.java
examples/java-client/src/main/java/com/example/hegrpc/demo/: HEClientDemo.java
examples/java-client/src/main/java/com/example/hegrpc/manager/: HospitalManager.java
examples/java-client/src/main/java/com/example/hegrpc/menu/: MenuSystem.java
examples/java-client/src/main/java/com/example/hegrpc/model/: Hospital.java
frontend/: .env.production.example  Dockerfile  nginx.conf  package-lock.json  package.json  vercel.json
frontend/public/: benchmark_data.json  index.html
frontend/src/: App.js  index.css
frontend/src/api/: client.js  client.test.js
frontend/src/components/: BenchmarkChart.js  BenchmarkTable.js  CountUp.js  DrawingCanvas.js  LogitsChart.js  Navbar.js  TimingChart.js
frontend/src/pages/: AboutPage.js  BenchmarkPage.js  PredictPage.js
frontend/src/playground/: CnnPipeline.js  MetricsStrip.js  MiniCanvas.js  OutputPanel.js  Playground.js
frontend/src/workbench/: ArchitectureDiagram.js  BenchmarkResultsDashboard.js  CnnClassroom.js  CnnPipeline.js  HECubeHeader.js  LibraryComparison.js  LiveStatusFeed.js  MetricsStrip.js  MiniCanvas.js  MnistBatchBenchmark.js  NeuralHero.js  OutputPanel.js  OwlGuide.js  ParameterComparison.js  Workbench.js  Workbench.test.js  mnistTestData.js  useInferenceProgress.js
grpc_client/: Cargo.toml  build.rs
grpc_client/src/: main.rs
grpc_server/: Cargo.toml  build.rs
grpc_server/src/: main.rs
helib_wrapper/: CMakeLists,txt  CMakeLists.txt
helib_wrapper/include/: helib_wrapper.h
helib_wrapper/src/: helib_wrapper.cpp
ml_pipeline/: README.md  requirements.txt
ml_pipeline/data/breast_cancer/: scaler_params.csv
ml_pipeline/data/heart_disease/: X_test.csv  X_train.csv  feature_info.csv  scaler_params.csv
ml_pipeline/notebooks/: 01_exploratory_analysis.ipynb
ml_pipeline/scripts/: load_datasets.py
mnist_training/: check_overflow.py  debug_conv2d.py  export_test_images.py  export_test_images_100.py  fhe_test_results_deg2_128bit.csv  fhe_test_results_deg3_128bit.csv  fhe_test_results_deg4_128bit.csv  find_safe_params.py  he_cnn_model.pth  reexport_weights.py  test_ec2_predict.py  train_mnist.py  verify_plaintext_cnn.py
mnist_training/weights/: conv1_weights.csv  conv2_weights.csv  fc_bias.csv  fc_weights.csv  model_config.json  test_images.csv
mnist_training/weights_deg2/: conv1_weights.csv  conv2_weights.csv  fc_bias.csv  fc_weights.csv  model_config.json
mnist_training/weights_deg3/: conv1_weights.csv  conv2_weights.csv  fc_bias.csv  fc_weights.csv  model_config.json  test_images_100.csv
mnist_training/weights_deg4/: conv1_weights.csv  conv2_weights.csv  fc_bias.csv  fc_weights.csv  model_config.json
openfhe_cpp_wrapper/: CMakeLists.txt
openfhe_cpp_wrapper/include/: openfhe_cnn_ops.h  openfhe_wrapper.h
openfhe_cpp_wrapper/src/: openfhe_cnn_ops.cpp  openfhe_wrapper.cpp
proto/: he_service.proto
scripts/: csv_to_json.py  csv_to_json_experiments.py  generate_library_charts.py  generate_poster_charts.py  run_all_benchmarks.sh  run_new_experiments.sh  setup_new_experiments.sh
spring-boot-api/: Dockerfile  pom.xml
spring-boot-api/src/main/java/com/fyp/hebench/controller/: BenchmarkController.java
spring-boot-api/src/main/java/com/fyp/hebench/model/: BenchmarkRequest.java  PredictRequest.java  PredictResponse.java
spring-boot-api/src/main/java/com/fyp/hebench/service/: GrpcClientService.java
spring-boot-api/src/main/proto/: he_service.proto
spring-boot-api/src/main/resources/: application.properties
spring-boot-api/src/test/java/com/fyp/hebench/controller/: BenchmarkControllerTest.java
src/: bindings.rs  encrypted_inference.rs  helib.rs  lib.rs  openFHE_binding.rs  openFHE_lib.rs  open_fhe_binding.rs  open_fhe_lib.rs  weight_loader.rs
