[package]
name = "he-benchmark-spike"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[lib]
name = "he_benchmark"
path = "src/lib.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "openfhe_cnn_demo"
path = "examples/openfhe_cnn_demo.rs"

[[example]]
name = "test_weight_loader"
path = "examples/test_weight_loader.rs"

