[package]
name = "he-benchmark-spike"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"

[features]
default = ["openfhe"]
seal = []
helib = []
openfhe = []
all_he = ["seal", "helib", "openfhe"]

[build-dependencies]
cc = "1.0"

[lib]
name = "he_benchmark"
path = "src/lib.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"
required-features = ["all_he"]

[[example]]
name = "medical_data"
path = "examples/medical_data.rs"
required-features = ["seal"]

[[example]]
name = "openfhe_cnn_demo"
path = "examples/openfhe_cnn_demo.rs"

[[example]]
name = "test_weight_loader"
path = "examples/test_weight_loader.rs"

[[example]]
name = "mnist_inference"
path = "examples/mnist_inference.rs"

[[example]]
name = "mnist_verify"
path = "examples/mnist_verify.rs"

